2008-03-31  Johannes Schmid  <jhs@gnome.org>

	patch by: Carl-Anton Ingmarsson:
	* src/anjuta.glade:
	Fixed padding in preferences

2008-03-31  Johannes Schmid  <jhs@gnome.org>

	patch by: Yuriy Penkin <yuriy.penkin@gmail.com>

	* plugins/tools/anjuta-tools.glade:
	* plugins/tools/anjuta-tools.ui:
	* plugins/tools/dialog.c (TOOL_LIST, TOOL_TREEVIEW, TOOL_EDIT_BUTTON,
	  TOOL_DELETE_BUTTON, TOOL_UP_BUTTON, TOOL_DOWN_BUTTON,
	  atp_tool_dialog_refresh, atp_tool_dialog_show):
	* plugins/tools/dialog.h (dialog, plugin):
	* plugins/tools/plugin.c (prefs, gxml, action_group,
	  atp_plugin_finalize, test, atp_plugin_activate,
	  atp_plugin_deactivate, atp_plugin_class_init, ipreferences_merge,
	  ipreferences_unmerge, ipreferences_iface_init):
	* plugins/tools/tool.c (action, action_group, accel_key, accel_mods,
	  icon, merge_id, atp_user_tool_free, atp_user_tool_deactivate,
	  atp_user_tool_activate, atp_tool_list_append_new,
	  atp_tool_list_activate, atp_tool_list_deactivate):
	* plugins/tools/tool.h (plugin):
	
	#515854 – Move configuration into preferences

2008-03-31  Johannes Schmid  <jhs@gnome.org>

	patch by: Carl-Anton Ingmarsson:
	* src/anjuta-app.c (style, on_toolbar_style_changed,
	  on_add_merge_widget, anjuta_app_instance_init):
	* src/anjuta.glade:
	
	#470483 – Make toolbar type (icon/text/both) independet from GNOME settings

2008-03-30  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/anjuta-debug-manager.glade,
	plugins/debug-manager/command.c,
	plugins/debug-manager/command.h,
	plugins/debug-manager/start.c,
	plugins/gdb/plugin.c,
	plugins/gdb/debugger.c,
	plugins/gdb/debugger.h,
	libanjuta/interfaces/libanjuta.idl:
	Improve start program dialog, allowing to specify working
	directory and environment variables

2008-03-26  Naba Kumar  <naba@gnome.org>

	* libanjuta/resources.c (anjuta_res_url_show): Use
	anjuta_prog_is_installed() instead of g_find_program_in_path() and
	fixed formatting.

	Patch from Carl-Anton Ingmarsson:
